# multi-ranguage-monorepo

./: README.md  package-lock.json  package.json
apps/cpp-system/: CMakeLists.txt  package.json
apps/cpp-system/src/: main.cpp
apps/go-api/: main.go  package.json
apps/kotlin-api/: gradle.properties  package.json  settings.gradle.kts
apps/kotlin-api/app/: build.gradle.kts
apps/kotlin-api/app/src/main/kotlin/com/example/kotlinapi/: Main.kt
apps/kotlin-api/app/src/test/kotlin/com/example/kotlinapi/: AppTest.kt
apps/python-api/: package.json  pyproject.toml
apps/python-api/src/: main.py
apps/rust-api/: package.json
apps/rust-api/src/: main.rs
apps/zig-tools/: build.zig  build.zig.zon  package.json
apps/zig-tools/.zig-cache/o/f1f36442370a2d05724a0cfa69f52244/: zig_tools.lib
apps/zig-tools/src/: main.zig
