[project]
name = "python-api"
version = "0.1.0"
description = "\"Python FastAPI in Turborepo\""
authors = [
    {name = "kazuma0606",email = "yoshimura.hisa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
